# djrip

./: .gitignore  Cargo.toml
src/: config.rs  lib.rs  main.rs
src/clients/: config.rs  mod.rs  tidal.rs  youtube.rs
